搜所功能完成

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,4 @@
 <!--index.wxml-->
 <view class="tan">
-<view class="iten">项目</view>
-<view class="iten">文件</view>
-<view class="iten">编辑</view>
-<view class="iten">工具</view>
-<view class="iten">界面</view>
-<view class="iten">界面</view>
+<view class="tan-1">搜所</view>
 </view>
