--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,9 +1,23 @@
 /**index.wxss**/
 .tan{
-  display: flex;
-  background-color: #f0f0f0
+ width: 100%;
+ height: 100rpx;
+ background-color:#EA4350;
+ display: flex;
+  justify-content:center;
+  align-items: center
+
 }
-.iten{
-  flex: 1;
-  text-align:center
+.tan-1{
+  width: 700rpx;
+  height: 80rpx;background-color: #fff;
+  border-radius:5rpx;
+  display: flex;
+  justify-content:center;
+  align-items: center
+
+  
+
+
+  
 }
