--- a/app.wxss
+++ b/app.wxss
@@ -8,3 +8,14 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+@import"/stao/styles/iconfont.wxss";
+
+page,view,image,navigator{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+image{
+  width: 100%;
+  height: 100%
+}
