--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,22 @@
 <!--index.wxml-->
-<view class="tan">
-<view class="tan-1">搜所</view>
+<sousuo/>
+<!-- <view class="sech">  -->
+<!-- <view class="sech-1" wx:for='{{navr}}'wx:key="index">{{item.name}}</view> -->
+<!-- <view class="sech-1" wx:key="id" wx:for="{{navr}}" wx:for-item='v' wx:for-index="i" >{{v.name}}{{i}}</view>
+</view> -->
+<view class="lb">
+  <swiper autoplay='true' circular='true' class="lb-1">
+    <swiper-item wx:for="{{swiper_list}}" wx:key="goods_id">
+      <navigator url="{{item.navigator_url}}" open-type="{{item.open_type}}">
+        <image src="{{item.image_src}}" mode="widthFix"></image>
+      </navigator>
+    </swiper-item>
+  </swiper>
+</view>
+<view  class="picture_1">
+  <view wx:for="{{dh_list}}" wx:key='index'>
+    <navigator url="{{item.navigator_url}}" open_type="{{item.open_type}}">
+      <image class="picture" src="{{item.image_src}}" mode="widthFix"></image>
+    </navigator>
+  </view>
 </view>
