--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,23 +1,24 @@
 /**index.wxss**/
-.tan{
- width: 100%;
- height: 100rpx;
- background-color:#EA4350;
- display: flex;
-  justify-content:center;
-  align-items: center
+
+.sech{
+  display: flex;
 
 }
-.tan-1{
-  width: 700rpx;
-  height: 80rpx;background-color: #fff;
-  border-radius:5rpx;
-  display: flex;
-  justify-content:center;
-  align-items: center
+.sech-1{
+flex: 1;
+ text-align: center;
+ background-color: #ddd
 
-  
-
-
-  
+}
+.lb-1{
+  height: 340rpx
+}
+.picture{
+width:128rpx;
+height: 140rpx
+}
+.picture_1{
+display: flex;
+justify-content: space-around;
+padding-top: 12rpx;
 }
