--- a/component/sechimpde/component.wxml
+++ b/component/sechimpde/component.wxml
@@ -1,4 +1,6 @@
 <!--component/sechimpde/component.wxml-->
 <view class="tan">
-  <view class="tan-1">搜所</view>
+<navigator url="/pages/search/index" open-type="navigate">
+ <view class="tan-1">搜所</view>
+</navigator>
 </view>
